add multiboot support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_C_EXTENSIONS OFF)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 list(APPEND CMAKE_C_FLAGS "-fno-pie -m32 -ffreestanding")
+set(MOS_KERNEL_BINARY ${CMAKE_BINARY_DIR}/mos_kernel.bin)
 
 # include config.cmake if it exists
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/config.cmake)
@@ -26,15 +27,19 @@ add_library(mos_kernel_object OBJECT
     src/kernel.c
     src/stdio.c)
 
+target_link_libraries(mos_kernel_object PRIVATE gcc)
 add_library(mos::kernel_object ALIAS mos_kernel_object)
 
-
 # Configure boot loader
-if(MOS_BOOT_METHOD STREQUAL "raw")
-    include(arch/x86/boot.cmake)
+include(arch/x86/boot.cmake)
+
+# add_custom_target(mos_kernel ALL DEPENDS ${MOS_KERNEL_BINARY})
+
+if(NOT TARGET mos_kernel)
+    message(FATAL_ERROR "No target mos_kernel defined, possibly invalid boot configuration")
 endif()
 
-add_custom_target(mos_kernel            DEPENDS ${CMAKE_BINARY_DIR}/mos_kernel.bin)
-add_custom_target(mos_kernel_image ALL  DEPENDS ${CMAKE_BINARY_DIR}/mos_kernel.img)
-
 message(STATUS "MOS is now configured.")
+message("")
+message("Boot Type: ${MOS_BOOT_METHOD}")
+message("")
