--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -26,4 +26,4 @@ jobs:
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DMOS_BOOT_METHOD=${{matrix.boot_method}}
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --verbose
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
