--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -12,15 +12,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        boot_method: [raw_boot, multiboot]
+        boot_method: [multiboot, multiboot_iso]
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up NASM
+      - name: Install packages
         run: |
           sudo apt update
-          sudo apt -y install nasm
+          sudo apt -y install nasm grub2-common mtools
 
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
