--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -20,10 +20,22 @@ jobs:
       - name: Install packages
         run: |
           sudo apt update
-          sudo apt -y install nasm grub2-common mtools
+          sudo apt -y install nasm grub2-common mtools jq
 
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
+      - name: Get Bootable File
+        id: get_bootable
+        run: |
+          export BOOTABLE=$(jq -r .${{matrix.boot_method}} < ${{github.workspace}}/build/bootables.json)
+          echo "::set-output name=bootable::$BOOTABLE"
+
       - name: Build
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target ${{matrix.boot_method}}
+
+      - name: Upload Bootable Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{matrix.boot_method}}
+          path: ${{ steps.get_bootable.outputs.bootable }}
