--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install packages
         run: |
           sudo apt update
-          sudo apt -y install nasm grub2-common mtools jq
+          sudo apt -y install nasm grub2-common mtools jq gcc-i686-linux-gnu
 
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
