add basic structure for a printf impl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_library(mos_kernel.elf OBJECT
     drivers/port.c
     lib/stdlib.c
     lib/string.c
+    lib/stdio.c
 )
 
 add_library(mos::elf_kernel ALIAS mos_kernel.elf)
