enable tests on CI

--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -35,10 +35,18 @@ jobs:
           echo "::set-output name=bootable::$BOOTABLE"
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --target ${{matrix.target}}
+        run: |
+          cd ${{github.workspace}}/build
+          ninja
+          ninja ${{matrix.target}}
+
+      - name: Run Tests
+        run: |
+          cd ${{github.workspace}}/build
+          ctest --output-on-failure
 
       - name: Upload Bootable Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: ${{matrix.target}}
+          name: MOS-${{matrix.target}}-${{matrix.build_type}}
           path: ${{steps.get_bootable.outputs.bootable}}
