--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         target: [multiboot, multiboot_iso]
-        build_type: [Debug, Release]
+        build_type: [Debug, RelWithDebInfo, Release]
 
     steps:
       - uses: actions/checkout@v3
