--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,16 @@ include(cmake/toolchains/cross-i686.cmake)
 
 cmake_minimum_required(VERSION 3.22)
 
-project(MOS LANGUAGES C ASM VERSION 0.1)
+project(MOS LANGUAGES CXX C ASM VERSION 0.1)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED TRUE)
-set(CMAKE_C_EXTENSIONS OFF)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_C_EXTENSIONS ON)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wpedantic -pedantic")
+
+# set(CMAKE_CXX_STANDARD 20)
+# set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+# set(CMAKE_CXX_EXTENSIONS OFF)
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -pedantic")
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
@@ -24,17 +26,18 @@ include(CTest)
 include(generate_kconfig)
 include(configure_summary)
 
-add_library(mos_kernel.elf OBJECT
+add_library(mos_kernel.elf STATIC
     init/kernel_init.c
     drivers/screen.c
     drivers/port.c
+    kernel/panic.c
     lib/stdlib.c
     lib/string.c
     lib/stdio.c
-    lib/panic.c
 )
 
 add_library(mos::elf_kernel ALIAS mos_kernel.elf)
+target_link_libraries(mos_kernel.elf PUBLIC gcc)
 
 generate_kconfig(mos_kernel.elf)
 
@@ -52,7 +55,7 @@ mos_add_summary_section(TESTS "MOS Kernel Library Tests")
 mos_add_summary_item(TESTS "All Tests" "${BUILD_TESTING}")
 
 if(BUILD_TESTING)
-    add_subdirectory(tests)
+    include(tests/tests.cmake)
 endif()
 
 message("")
