--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         target: [multiboot, multiboot_iso]
-        build_type: [Debug, Release]
+        build_type: [Debug, RelWithDebInfo]
         run_tests: [ON, OFF]
 
         exclude:
@@ -66,5 +66,5 @@ jobs:
         if: matrix.run_tests == 'ON' && failure() && steps.run_tests.outcome == 'failure'
         uses: actions/upload-artifact@v3
         with:
-          name: MOS-${{matrix.target}}-${{matrix.build_type}}-failure.ppm
-          path: ${{github.workspace}}/build/failure.ppm
+          name: MOS-${{matrix.target}}-${{matrix.build_type}}-failures.zip
+          path: ${{github.workspace}}/build/test-failure.*
