--- a/cmake/kconfig.h.in
+++ b/cmake/kconfig.h.in
@@ -10,3 +10,5 @@ extern const char *MOS_KERNEL_REVISION;
 extern const char *MOS_KERNEL_BUILTIN_CMDLINE;
 
 #cmakedefine MOS_KERNEL_RUN_TESTS
+#cmakedefine MOS_MM_LIBALLOC_HAS_LOCKS
+#cmakedefine LIBALLOC_DEBUG
