x86: enable paging and CR0 WP bit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,12 @@
                     "ignoreFailures": true
                 },
             ],
+            "sourceFileMap": {
+                "${workspaceFolder}": {
+                    "editorPath": "${workspaceFolder}",
+                    "useForBreakpoints": "true"
+                }
+            },
         },
     ]
 }
